<?xml version="1.0"?>
<package format="3">
  <name>scout_nav2</name>
  <version>0.0.0</version>
  <description>Navigation2 configuration for Scout Mini robot</description>
  <maintainer email="region@todo.todo">region</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>navigation2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
